# AI-ML-Class

./: .gitignore
9 ows/: Day 9.ows
Day 1/program/: pg2.py  program1.py
Day 10/: main.ipynb  pyproject.toml
Day 11/: main.ipynb  main.py  pyproject.toml
Day 13/: language-translation.ipynb  main.ipynb  pyproject.toml  summarizer.ipynb
Day 14/: main.py  program1.py  program3.py  pyproject.toml
Day 15/: main.py  pyproject.toml  rag.ipynb
Day 2/: main.py  main2.py  main3.ipynb  pyproject.toml
Day 3/: main.ipynb  pyproject.toml
Day 4/: Training.ipynb  polynomial_regression.ipynb  pyproject.toml
Day 6/: iris_classification.ipynb  pyproject.toml
Day 7/: main.ipynb  pyproject.toml  titanic_model.pkl
Day 8/: backend.py  main.py  pyproject.toml  titanic_ui.py
Day 9/: C_H_D.ows
